# stt-assistant

./: .clippy.toml  .dockerignore  .gitignore  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  Containerfile  LICENSE  Makefile  README.md  TODO.md  build.bash  rustfmt.toml  stt-assistant.toml  stt_ctl  telora.toml
.github/workflows/: ci.yml
pkg/: PKGBUILD  telora.install
script/: build  stt_ctl
scripts/: build  clean
scripts/compatibility/: distrobox.ini  setup-env.sh  simulate.sh  verify.sh
stt-client/: Cargo.toml
stt-client/src/: connection.rs  input.rs  main.rs  ui.rs
stt-daemon/: Cargo.toml
stt-daemon/src/: audio.rs  main.rs  socket.rs  transcriber.rs
stt-model-manager/: Cargo.toml
stt-model-manager/src/: main.rs
systemd/: stt-assistant.service  stt-daemon.service  telora-daemon.service  telora.service
telora/: Cargo.toml
telora-daemon/: Cargo.toml
telora-daemon/src/: main.rs  socket.rs  transcriber.rs  vad.rs
telora-models/: Cargo.toml
telora-models/src/: main.rs
telora/src/: connection.rs  main.rs
