[package]
name = "stt-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
whisper-rs = { version = "0.13.2", features = ["cuda"] }
cpal = "0.15"
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
log = "0.4"
env_logger = "0.11"
hound = "3.5"
socket2 = "0.5"
nix = { version = "0.27", features = ["signal"] }
rubato = "0.14"
ringbuf = "0.3"
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
